--- a/staticptr/staticptr.cabal
+++ b/staticptr/staticptr.cabal
@@ -14,6 +14,7 @@ cabal-version: >=1.2
 library
   build-depends: base >= 4.4 && < 5,
                  binary >=0.7.1 && < 0.8,
+                 containers >=0.5.0 && < 0.6.0,
                  bytestring  >= 0.10.0 && < 0.11,
 --bytestring only for mockup of SPT
                  typeableT >= 0.0 && < 0.1,
